--- a/BMREG_App1.html
+++ b/BMREG_App1.html
@@ -417,10 +417,10 @@ fetchSubmittedData('BRANCH!AC6:AF16', 'submitted13MNTBody');
 <div class="footer-text">
 <p class="fade">Designed & Developed By Mr Veerendra, Regional Office, Belagavi</p>
 </div>
-
-//<div class="video-container">
-//<iframe src="https://drive.google.com/file/d/1TK3wsGfeg9acgunapm6YeHINKMpy1ZPR/preview" width="560" height="315" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-//</div>
-
+<!--
+<div class="video-container">
+<iframe src="https://drive.google.com/file/d/1TK3wsGfeg9acgunapm6YeHINKMpy1ZPR/preview" width="560" height="315" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+-->
 </body>
 </html>
