--- a/BMREG_App1.html
+++ b/BMREG_App1.html
@@ -202,6 +202,11 @@ table th, table td {
 <div class="container">
         <a href="#" onclick="showPasswordPrompt()">View Reports</a>
 </div>
+
+<div id="passwordPrompt" class="hidden">
+        <input type="password" id="password" placeholder="Enter Password">
+        <button onclick="checkPassword()">Submit</button>
+</div>
 		
 <hr>
 
@@ -426,7 +431,20 @@ fetchSubmittedData('BRANCH!S6:V16', 'submittedHBBody');
 fetchSubmittedData('BRANCH!X6:AA16', 'submittedSMEBody');
 fetchSubmittedData('BRANCH!AC6:AF16', 'submitted13MNTBody');
 
+function showPasswordPrompt() {
+            document.getElementById('passwordPrompt').classList.remove('hidden');
+        }
 
+        function checkPassword() {
+            var password = document.getElementById('password').value;
+            if (password === '0831*') { // Replace 'your_password' with your actual password
+                window.open('https://docs.google.com/spreadsheets/d/e/2PACX-1vRUfpB5MnoesM0ig1qSwxuCqoOvzfz_3GGbBNj-3F7ENBMn2iqkGVilBWKMW9RfCk1Eo0kPE6qwlgtA/pubhtml', '_blank');
+                document.getElementById('passwordPrompt').classList.add('hidden');
+            } else {
+                alert('Incorrect password');
+            }
+        }
+	
 </script>
 <div class="footer-text">
 <p class="fade">Designed & Developed By Mr Veerendra, Regional Office, Belagavi</p>
